Add Relevant Comments

--- a/main.ipynb
+++ b/main.ipynb
@@ -3009,7 +3009,7 @@
     "\n",
     "def find_direction(pairs, embedding, num_components = 10):\n",
     "    '''\n",
-    "        \n",
+    "        Identify the gender subspace\n",
     "    '''\n",
     "    matrix = []\n",
     "    for a, b in pairs:\n",
@@ -3023,9 +3023,16 @@
     "    return pca\n",
     "\n",
     "def drop(u, v):\n",
+    "    '''\n",
+    "        Align the words such that they are equidistant from \n",
+    "        gender specific words\n",
+    "    '''\n",
     "    return u - v * u.dot(v) / v.dot(v)\n",
     "\n",
     "def debias_embeddings(E, gender_specific_words, definitional, equalize):\n",
+    "    '''\n",
+    "        Find gender direction and do hard debiasing.\n",
+    "    '''\n",
     "    gender_direction = find_direction(definitional, E).components_[0]\n",
     "    specific_set = set(gender_specific_words)\n",
     "    for i, w in enumerate(E.words):\n",
@@ -3062,14 +3069,16 @@
     }
    ],
    "source": [
-    "# Lets load some gender related word lists to help us with debiasing\n",
+    "# words used to identify the gender subspace\n",
     "with open('./data/definitional_pairs.json', \"r\") as f:\n",
     "    defs = json.load(f)\n",
     "print(\"definitional\", defs)\n",
     "\n",
+    "# Equalize pairs ensure that neutral words are equidistant from both extremes \n",
     "with open('./data/equalize_pairs.json', \"r\") as f:\n",
     "    equalize_pairs = json.load(f)\n",
     "\n",
+    "# words where gender specificity is desired\n",
     "with open('./data/gender_specific_seed.json', \"r\") as f:\n",
     "    gender_specific_words = json.load(f)\n",
     "print(\"gender specific\", len(gender_specific_words), gender_specific_words[:10])"
